// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewsList with data is rendered correctly 1`] = `
<React.Fragment>
  <h2
    className="reviews__title"
  >
    Reviews · 
    <span
      className="reviews__amount"
    >
      2
    </span>
  </h2>
  <ul
    className="reviews__list"
  >
    <Review
      review={
        Object {
          "comment": "We loved it so much, the house, the veiw, the location just great.. Highly reccomend :)",
          "date": "2020-11-02T13:38:44.752Z",
          "id": 1,
          "rating": 3,
          "user": Object {
            "avatar": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/9.jpg",
            "id": 18,
            "name": "Sophie",
          },
        }
      }
    />
    <Review
      review={
        Object {
          "comment": "What an amazing view! The house is stunning and in an amazing location. The large glass wall had an amazing view of the river!",
          "date": "2020-11-02T13:38:44.752Z",
          "id": 2,
          "rating": 2,
          "user": Object {
            "avatar": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/7.jpg",
            "id": 16,
            "name": "Mollie",
          },
        }
      }
    />
  </ul>
</React.Fragment>
`;

exports[`ReviewsList with out data is rendered correctly 1`] = `
<React.Fragment>
  <h2
    className="reviews__title"
  >
    Reviews · 
    <span
      className="reviews__amount"
    >
      0
    </span>
  </h2>
  <ul
    className="reviews__list"
  />
</React.Fragment>
`;
